[WFCORE-3996] Update GC logging to work on Java 9+