@@ -2,6 +2,10 @@
 call %*
 goto :eof
 
+:setJava9_plus
+    "%JAVA%" --add-modules=java.se -version >nul 2>&1 && (set JAVA_9_PLUS=true) || (set JAVA_9_PLUS=false)
+goto :eof
+
 :setDefaultModularJvmOptions
   "%JAVA%" --add-modules=java.se -version >nul 2>&1 && (set MODULAR_JDK=true) || (set MODULAR_JDK=false)
   if "!MODULAR_JDK!" == "true" (
